# linoleum

./: .gitignore  Cargo.toml  README.md  build.rs
bgs/: example1.bg  example2.bg  example3.bg
data/: arrows.ahi  tool_icons.ahi
src/: canvas.rs  coords.rs  editor.rs  element.rs  event.rs  main.rs  paint.rs  palette.rs  state.rs  textbox.rs  tilegrid.rs  toolbox.rs  unsaved.rs  util.rs
tiles/: caution_walls.ahi  purple_walls.ahi  red_brick.ahi
