[package]
name = "linoleum"
version = "0.1.0"
authors = ["Matthew D. Steele <mdsteele@alum.mit.edu>"]
build = "build.rs"
edition = "2018"

[dependencies]
ahi = { git = "https://github.com/mdsteele/ahi", rev = "1534f7c8" }
getopts = "0.2"

[dependencies.sdl2]
version = "0.31"
features = ["unsafe_textures", "use_mac_framework"]
